# QI_data_reader

./: .gitignore  Cargo.toml  README.md  pyproject.toml  qi_data_reader copy.pyi  qi_data_reader.pyi  setupfunc.ps1  test.py
src/: error.rs  header.rs  lib.rs
