[package]
name = "qi_data_reader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qi_data_reader"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
numpy = "0.27"
pyo3-stub-gen = "0.19.0"
rawzip = "0.4.3"
thiserror = "2.0.18"
flate2 ="1.1.9"
rayon = "1.11.0"
byteorder = "1.5.0"
[profile.release]
debug = true
